# conann

./: .gitignore  README.md  generate-skew.ipynb
Auncel/: .gitignore  README.md
Auncel/demos/: demo_deep10M_Auncel.cpp
Auncel/eval/: CMakeLists.txt  bound.cpp  bound.sh  bound_old_faiss.cpp  compute_gt.cpp  compute_gts.sh  demo.cpp  effect.sh  effect_error.cpp  effect_time.cpp  latency.cpp  latency.sh  overhead.cpp  sample_queries.cpp  sample_queries.sh
Auncel/eval/trained_index/: gist_IVF1024,Flat_trained.index
Auncel/faiss/: AutoTune.cpp  CMakeLists.txt  IVF_pro.cpp  IVF_pro.h  Index.cpp  Index.h  IndexIVF.cpp  IndexIVF.h  profile.cpp  profile.h
Auncel/figures/: requirements.txt
Auncel/figures/effect/: figure13-1.py  plot-fnr.py
Auncel/figures/validation/: figure15-1.py
Auncel/perf_tests/: CMakeLists.txt  bench_scalar_quantizer_accuracy.cpp  bench_scalar_quantizer_decode.cpp  bench_scalar_quantizer_distance.cpp  bench_scalar_quantizer_encode.cpp  utils.cpp
conann/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
conann/benchs/: Makefile  cmake_install.cmake
conann/demos/: CMakeLists.txt  Makefile  cmake_install.cmake  demo_conann  demo_conann.cpp
conann/eval/: CMakeLists.txt  error.cpp  error_pq.cpp  latency.cpp  run.sh  test_cache.cpp  variable_k.cpp
conann/faiss/: CMakeLists.txt  ConannCache.h  IndexIVF.cpp  IndexIVF.h  Makefile  cmake_install.cmake
conann/perf_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
conann/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  faiss_test[1]_include.cmake
conann/tutorial/cpp/: Makefile  cmake_install.cmake
experiments/: experiment-controller.py
experiments/plots/: adaptivity.ipynb  efficiency.ipynb  noraps-avg-efficiency.ipynb  overhead.ipynb  validity.ipynb  variablek.ipynb
experiments/rag-motivation/: motivation.ipynb
faiss-1.9.0/: CMakeLists.txt  logs-faiss-gauss.txt  logs-gauss6-7.txt  logs-sift.txt  logs.txt
faiss-1.9.0/eval/: CMakeLists.txt  error.cpp  error_pq.cpp  latency.cpp  run.sh  variable_k.cpp
faiss-1.9.0/faiss/: IndexIVF.cpp
